thay do ba dong

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
    <h2>Phan ngoc binh</h2>
+   <p>la mot thang co trai ngheo nhu anh mau trang nhu ban tay</p>
+   <p>la mot thang co trai ngheo nhu anh mau trang nhu ban tay 1</p>
+   <p>la mot thang co trai ngheo nhu anh mau trang nhu ban tay 2</p>
 </body>
 </html>
